// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DatePicker with placeholder 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "rgba(33, 33, 33, 0.5)",
      "borderRadius": 10,
      "borderWidth": 0.9,
      "flexDirection": "row",
      "height": 45,
      "justifyContent": "center",
      "marginVertical": 10,
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <Text
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 16,
          "fontWeight": "normal",
          "textAlign": "left",
        },
        Object {
          "color": "rgba(33, 33, 33, 0.5)",
          "flex": 1,
        },
      ]
    }
  >
    placeholder
  </Text>
  <Text
    allowFontScaling={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.5)",
          "fontSize": 20,
        },
        Object {
          "paddingRight": 15,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`renders colored DatePicker 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "rgba(33, 33, 33, 0.5)",
      "borderRadius": 10,
      "borderWidth": 0.9,
      "flexDirection": "row",
      "height": 45,
      "justifyContent": "center",
      "marginVertical": 10,
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <Text
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 16,
          "fontWeight": "normal",
          "textAlign": "left",
        },
        Object {
          "color": "rgba(33, 33, 33, 0.5)",
          "flex": 1,
        },
      ]
    }
  >
    Select Date
  </Text>
  <Text
    allowFontScaling={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.5)",
          "fontSize": 20,
        },
        Object {
          "paddingRight": 15,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`renders regular DatePicker 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "rgba(33, 33, 33, 0.5)",
      "borderRadius": 10,
      "borderWidth": 0.9,
      "flexDirection": "row",
      "height": 45,
      "justifyContent": "center",
      "marginVertical": 10,
      "paddingHorizontal": 10,
      "width": "100%",
    }
  }
>
  <Text
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#000",
          "fontSize": 16,
          "fontWeight": "normal",
          "textAlign": "left",
        },
        Object {
          "color": "rgba(33, 33, 33, 0.5)",
          "flex": 1,
        },
      ]
    }
  >
    Select Date
  </Text>
  <Text
    allowFontScaling={false}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "rgba(33, 33, 33, 0.5)",
          "fontSize": 20,
        },
        Object {
          "paddingRight": 15,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;
